[tool.poetry]
name = "ioclover"
version = "0.1.0"
description = ""
authors = ["Varpos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.19"
dynaconf = "^3.2.0"
uvicorn = "^0.23.1"
psycopg2 = "^2.9.6"
whois = "^0.9.27"
python-whois = "^0.8.0"
otxv2 = "^1.5.12"
logging = "^0.4.9.6"
asyncpg = "^0.28.0"
aiocache = "^0.12.1"
httpx = "^0.24.1"
pydantic = "^2.1.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
